# Video_Streaming

./: .bashrc  .gitignore  .zshrc  1  QtProject.conf  README.md  dnsmasq.conf  mediamtx.yml  mediamtx_webcam.yml  nginx.conf  setup.sh  system_styles.sh
FreeCAD/: FreeCAD.conf  user.cfg
PrusaSlicer/: PrusaSlicer.ini  PrusaSlicerGcodeViewer.ini
QDirStat/: QDirStat.conf
Raspberry Pi/: Imager.conf
Thunar/: accels.scm  uca.xml
Ultralytics/: settings.yaml
_custom_services/: udiskie.service
_packages/: packages.txt  packages_aur.txt  services.txt
audacity/: audacity.cfg
backend/: server copy.py  server.py  stepper.py
balenaEtcher/: Network Persistent State  Preferences
config/: dnsmasq.conf  hostapd.conf  nginx.conf  startup_camera.service  wpa_supplicant.conf.garden  wpa_supplicant_default.conf
dconf/: user
filezilla/: bookmarks.xml  filezilla.xml  layout.xml  recentservers.xml
foot/: foot.ini
galendae/: galendae.conf
ghb/: Activity.log.77337  preferences.json  presets.json
godot/: editor_settings-4.3.tres  recent_dirs
gtk-2.0/: gtkfilechooser.ini
gtk-3.0/: bookmarks
kitty/: kitty.conf
mako/: config
mgba/: config.ini  library.sqlite3  nointro.sqlite3  qt.ini
processing/: contribs.txt  preferences.old  recent.txt
pulse/: b00d47cb0ee24e04915ac07194f7c9a5-card-database.tdb  b00d47cb0ee24e04915ac07194f7c9a5-device-volumes.tdb  b00d47cb0ee24e04915ac07194f7c9a5-stream-volumes.tdb  cookie
stream_components/: CMakeLists.txt  build_camera_helper.sh  go.mod  libCameraHelper.cpp  rpicam_vid_stream.sh  rtsp_server.py  webrtc_server.go
(+119 files in other folders)
